--- a/css/popup.css
+++ b/css/popup.css
@@ -65,8 +65,10 @@ body {
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 50px;
-  box-sizing: border-box;
   text-align: center;
+  overflow: hidden;
+  padding-bottom: 50px;
+  box-sizing: border-box;
 }
 #wrap div.popups div.speed_compare_popup span.xbox {
   cursor: pointer;
@@ -178,33 +180,70 @@ body {
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord {
   width: 100%;
-  height: 380px;
-  margin: 30px auto;
+  margin: 0px auto;
+  height: 600px;
   border-radius: 15px;
-  overflow-y: scroll;
   float: left;
   box-sizing: border-box;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap {
   width: 99%;
-  border: 1.5px solid #ec6647;
-  height: 380px;
-  border-radius: 10px;
   box-sizing: border-box;
   margin-left: 5px;
-  overflow: hidden;
+  height: 500px;
+  position: relative;
 }
-#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap .data_tabs {
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.caption {
+  width: 975px;
+  height: 70px;
+  z-index: 95;
+  background: white;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.caption h3 {
+  width: 500px;
+  float: left;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.caption h4 {
+  width: 500px;
+  float: left;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.caption div.back_btn {
+  width: 220px;
+  height: 50px;
+  background: #3c5271;
+  border-radius: 5px;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  line-height: 50px;
+  margin-right: 20px;
+  float: right;
+  margin-top: -25px;
+  letter-spacing: -1px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.tables {
+  height: 708px;
+  box-sizing: border-box;
+  border: 1.5px solid #ec6647;
+  border-radius: 10px;
+  transform: translateY(75px);
+  box-sizing: inherit;
+  position: relative;
+  z-index: 90;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.data_tabs {
   width: 100%;
   border-bottom: 1px solid #d0d0d0;
 }
-#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap .data_tabs .left_tab {
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.data_tabs .left_tab {
   width: 45%;
   height: 100%;
   float: left;
   box-sizing: border-box;
 }
-#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap .data_tabs .center_tab {
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.data_tabs .center_tab {
   width: 10%;
   height: 100%;
   background: #f5f5f5;
@@ -213,7 +252,7 @@ body {
   border-right: 1px solid #d0d0d0;
   box-sizing: border-box;
 }
-#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap .data_tabs .right_tab {
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.data_tabs .right_tab {
   width: 45%;
   height: 100%;
   float: left;
@@ -314,19 +353,300 @@ body {
   width: 100%;
   height: 33.3%;
 }
-#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row b {
-  display: block;
-  width: 33.3%;
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum {
   height: 100%;
   text-align: center;
   float: left;
   line-height: 33.3px;
 }
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum.colum-4 {
+  width: 25%;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum.colum-6 {
+  width: calc(100%/6);
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum_head {
+  width: 20%;
+  font-size: 0.875rem;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum_body {
+  width: 40%;
+  font-size: 0.875rem;
+  position: relative;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum_body span.gender_mark {
+  position: absolute;
+  line-height: 25px;
+  color: white;
+  border-radius: 100%;
+  font-size: 0.875rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum_body .man_mark {
+  background: #24a1e9;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum_body .woman_mark {
+  background: #ff449c;
+}
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body1 {
   background-color: #f0f0f0;
 }
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body1 div {
+  color: #24a1e9;
+}
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body2 {
   border: 0px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body2 div {
+  font-size: 0.875rem;
+  color: #ff449c;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.illust_tab {
+  width: 100%;
+  height: 200px;
+  border-bottom: 1px solid #d0d0d0;
+  padding: 10px;
+  box-sizing: border-box;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.illust_tab div.illu_tab {
+  width: 35%;
+  height: 100%;
+  background-image: url(../img/popup/illust.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position: right;
+  background-size: contain;
+  float: left;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.illust_tab div.text_tab {
+  width: 60%;
+  float: left;
+  height: 100%;
+  padding: 15px;
+  box-sizing: border-box;
+  text-align: left;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.illust_tab div.text_tab p {
+  color: #444;
+  margin-bottom: 5px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.illust_tab div.text_tab div.consult_btn {
+  cursor: pointer;
+  width: 250px;
+  height: 50px;
+  background: #ec6647;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  font-size: 1.125rem;
+  color: white;
+  border-radius: 100px;
+  margin-top: 30px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.bottom_data div.tabs {
+  box-sizing: border-box;
+  padding-left: 20px;
+  position: relative;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.bottom_data div.tabs p {
+  width: 350px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center  ;
+  color: #666;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.bottom_data .left_tab {
+  width: 45%;
+  height: 100%;
+  float: left;
+  box-sizing: border-box;
+  word-break: keep-all;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.bottom_data .center_tab {
+  width: 10%;
+  height: 100%;
+  background: #f5f5f5;
+  float: left;
+  border-left: 1px solid #d0d0d0;
+  border-right: 1px solid #d0d0d0;
+  box-sizing: border-box;
+  background-size: 50px;
+  position: relative;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.bottom_data .center_tab span {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  transform: translate(0%, -50%);
+  font-size: 0.875rem;
+  color: #444444;
+  font-weight: bold;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.bottom_data .right_tab {
+  width: 45%;
+  height: 100%;
+  float: left;
+  box-sizing: border-box;
+  word-break: keep-all;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.character_data.bottom_data {
+  height: 90px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.term_data.bottom_data {
+  height: 50px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.term_data.bottom_data.last-row {
+  border: 0px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms {
+  width: 1000px;
+  height: 120px;
+  margin: 40px auto;
+  border-top: 1px solid #d0d0d0;
+  text-align: center;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms div.input_box {
+  margin-top: 20px;
+  width: 30%;
+  height: 40px;
+  display: inline-block;
+  overflow: hidden;
+  margin-right: 1%;
+  margin-left: 1%;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms div.input_box input,
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms div.input_box select {
+  box-sizing: border-box;
+  border: 2px solid #d0d0d0;
+  outline: none;
+  box-shadow: none;
+  padding: 0px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .name_box input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .info_box select {
+  width: 30%;
+  height: 100%;
+  outline: none;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .info_box input {
+  width: 68%;
+  height: 100%;
+  outline: none;
+  float: right;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .phone_box select {
+  width: 30%;
+  height: 100%;
+  outline: none;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .phone_box input {
+  width: 68%;
+  height: 100%;
+  outline: none;
+  float: right;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms label.container {
+  width: 250px;
+  margin-left: 26px;
+  margin-top: 10px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab {
+  width: 100%;
+  height: 135px;
+  box-sizing: border-box;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.user_info {
+  width: 20%;
+  height: 100%;
+  border: 1px solid #d9d9d9;
+  box-sizing: border-box;
+  margin-right: 2%;
+  float: left;
+  padding: 20px;
+  text-align: left;
+  border-radius: 15px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.user_info h3 {
+  font-size: 1.125rem;
+  color: #222;
+  letter-spacing: -1px;
+  margin-bottom: 25px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.user_info h4 {
+  color: #666;
+  letter-spacing: -1px;
+  font-size: 0.875rem;
+  margin-bottom: 5px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.place_info {
+  width: 54%;
+  height: 100%;
+  border: 1px solid #d9d9d9;
+  box-sizing: border-box;
+  float: left;
+  margin-right: 2%;
+  padding: 20px;
+  border-radius: 15px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.place_info h3 {
+  font-size: 1.125rem;
+  color: #222;
+  text-align: left;
+  margin-bottom: 35px;
+  font-weight: bold;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.place_info p {
+  font-size: 1rem;
+  width: 60%;
+  float: left;
+  text-align: left;
+  margin-bottom: 5px;
+  letter-spacing: -1px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.place_info p span {
+  color: #ec6647;
+  font-weight: bold;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.place_info h2.price {
+  width: 30%;
+  float: right;
+  font-size: 2rem;
+  color: #ec6647;
+  letter-spacing: -1px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.place_info h2.price span {
+  font-size: 1.125rem;
+  color: #222;
+  margin-left: 10px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.place_info div.btn_area {
+  width: 30%;
+  float: right;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.btn_area {
+  width: 22%;
+  height: 48%;
+  background: #3c5271;
+  box-sizing: border-box;
+  font-weight: bold;
+  letter-spacing: -1px;
+  float: left;
+  border-radius: 10px;
+  line-height: calc(135px*0.48);
+  color: white;
 }
 #wrap div.popups div.speed_compare_popup div.compare_fn_btn {
   cursor: pointer;
@@ -334,7 +654,18 @@ body {
   height: 50px;
   background: #ec6647;
   margin: 0 auto;
-  margin-top: 200px;
+  margin-top: 100px;
+  border-radius: 50px;
+  line-height: 50px;
+  color: white;
+  font-weight: bold;
+}
+#wrap div.popups div.speed_compare_popup div.cal_fn_btn {
+  cursor: pointer;
+  width: 250px;
+  height: 50px;
+  background: #ec6647;
+  margin: 0 auto;
   border-radius: 50px;
   line-height: 50px;
   color: white;
